--- a/groupbyfeature.ipynb
+++ b/groupbyfeature.ipynb
@@ -5,7 +5,19 @@
    "execution_count": 1,
    "id": "ae48c578",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'openpyxl'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mopenpyxl\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'openpyxl'"
+     ]
+    }
+   ],
    "source": [
     "import openpyxl\n",
     "import pandas as pd\n",
@@ -17,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b1932bb4",
    "metadata": {},
    "outputs": [],
@@ -33,13 +45,13 @@
    "outputs": [],
    "source": [
     "classes_dict = {\n",
-    "    'retrieval':['search', 'import', 'expertaddition', 'fulltextpdf'],\n",
+    "    'retrieval':['search', 'import', 'expertaddition', 'fulltextpdf', 'autofulltext'],\n",
     "    'appraisal': ['tiabscreen', 'distinctscreen', 'dualscreen',\n",
     "                   'wordhighlight', 'screeninautomation', 'deduplication'],\n",
-    "    'extraction': ['tag', 'extract', 'dualextract', 'evidencemap', 'riskofbias'],\n",
-    "    'output':['flowdiagram', 'writing', 'visualization', 'export'],\n",
+    "    'extraction': ['tag', 'extract', 'dualextract', 'riskofbias'],\n",
+    "    'output':['flowdiagram', 'writing', 'citationmanager','visualization', 'export'],\n",
     "    'admin':['protocol', 'userroles', 'monitor', 'comments', 'training','support'],\n",
-    "    'access': ['free', 'multipleusers', 'living', 'publicoutputs']\n",
+    "    'access': ['free', 'living', 'publicoutputs', 'multipleusers']\n",
     "    }\n",
     "\n",
     "classes_pallettes = {\n",
@@ -308,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
